--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+<ul>
+
+      		<li id="hello"><a href="index.html">Home</a></li>
+      		<li><a href="about.html">About</a></li>
+      		<li><a href="products.html">Products</a></li>
+      		<li><a href="enquiries.html">Enquiries</a></li>
+      		
+      	</ul>
+
 @charset "utf-8"
 
 body {
